--- a/Mybank/styles/cards-page.css
+++ b/Mybank/styles/cards-page.css
@@ -13,14 +13,14 @@
 
 .cards-header h1 {
   font-size: 2.5rem;
-  color: #232b4d;
+  color: #fff;
   margin-bottom: 0.5rem;
   font-weight: 700;
 }
 
 .cards-header p {
   font-size: 1.1rem;
-  color: #7a869a;
+  color: #fff;
   margin: 0;
 }
 
