--- a/Mybank/styles/moneyflow.css
+++ b/Mybank/styles/moneyflow.css
@@ -108,3 +108,25 @@
     padding: 0.4rem 0.8rem;
   }
 }
+
+@media (min-width: 1025px) {
+  .money-flow {
+    width: fit-content !important;
+    height: fit-content !important;
+    padding: 0.7rem 0.7rem 0.4rem 0.7rem !important;
+  }
+  .moneyflow-header {
+    margin-bottom: 0.8rem !important;
+  }
+  .moneyflow-title {
+    font-size: 0.9rem !important;
+  }
+  .moneyflow-controls select {
+    padding: 0.2rem 0.5rem !important;
+    font-size: 0.9rem !important;
+  }
+  .moneyflow-value {
+    font-size: 0.8rem !important;
+    padding: 0.3rem 0.7rem !important;
+  }
+}
